--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 <center><h3 style="font-family:arial;">Learn More About the Crime</h3></center>
+<p style="font-family:roboto;">
+The crime was commited at exactly 12 pm last night. You know about it from the newspapers, but all you know was that the memes
+that were taken were:
+1 Doge
+2 Dat Bois
+5 Insanity Wolves
+2 Advice Dogs
+3 DogForts
+7 Courage Wolves
+8 Gabe the Dogs
+<audio autoplay loop>
+  <source src="Superboy.mp3" type="audio/mpeg">
+</audio>
